# Turbin3-Q1-25

./: .gitignore  README.md
21_january/anchor-vault/: Anchor.toml
airdrop/: .gitignore  README.md  Turbin3-wallet.json  airdrop.ts  enroll.ts  keygen.ts  package.json  transfer.ts
anchor-amm/: Anchor.toml  README.md
anchor-escrow/: Anchor.toml
anchor-escrow/tests/: anchor-escrow.ts
anchor-marketplace/: Anchor.toml
anchor-marketplace/tests/: anchor-marketplace.ts
anchor-vault/: Anchor.toml  rust-toolchain.toml
anchor-vault/programs/anchor-vault/: Cargo.toml
anchor-vault/tests/: anchor-vault.ts
capstone/: PredictionMarket_ExecutiveSummary.md  README.md  letter_of_intent.md  user_stories.md
capstone/architecture/: arch_diagrams.md  generate_diagrams.sh
capstone/architecture/diagrams/: account_structure.puml  core_components.puml  market_resolution.puml  trade_flow.puml
capstone/prediction_market/: .gitignore  Anchor.toml  PredictionMarket_ExecutiveSummary.md  PredictionMarket_PitchDeck.md  PredictionMarket_PitchDeck.pptx.md  package.json
capstone/prediction_market/programs/prediction_market/: Cargo.toml
capstone/prediction_market/programs/prediction_market/src/: error.rs  lib.rs  utility.rs
capstone/prediction_market/programs/prediction_market/src/context/: init_config.rs  init_market.rs  mod.rs  place_bet.rs  resolve_market.rs  withdraw.rs
capstone/prediction_market/programs/prediction_market/src/state/: bet_state.rs  market_state.rs  mod.rs  program_config.rs  vault.rs
dice/: Anchor.toml
prereq2/: Cargo.toml
prereq2/src/: lib.rs
(+41 files in other folders)
